<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan_background"
    android:orientation="vertical"
    tools:context="com.example.android.popquiz.MainActivity">

    <TextView
        android:id="@+id/physics"
        style="@style/CategoryStyle"
        android:layout_height="@dimen/list_item_height"
        android:background="@color/category_numbers"
        android:text="@string/category_numbers"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:onClick="openPhysics"/>

    <TextView
        android:id="@+id/maths"
        style="@style/CategoryStyle"
        android:layout_height="@dimen/list_item_height"
        android:background="@color/category_colors"
        android:text="@string/category_colors"
        android:layout_marginBottom="16dp"
        android:onClick="openMaths"/>

    <TextView
        android:id="@+id/english"
        style="@style/CategoryStyle"
        android:layout_height="@dimen/list_item_height"
        android:background="@color/category_phrases"
        android:text="@string/category_english"
        android:layout_marginBottom="16dp"
        android:onClick="openEnglish"/>

</LinearLayout>
