<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/root_View"
    android:background="@color/tan_background"
    tools:context="com.example.android.popquiz.MathActivity"
    >



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
       >



<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/question1View"
        android:background="@color/category_colors"
        android:layout_margin="16dp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Question 1"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:textSize="50dp"
            style="@style/CategoryStyle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maths_question1"
            android:textSize="15dp"
            android:layout_margin="16dp"
            style="@style/CategoryStyle"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/maths_groupq1"

            >

            <RadioButton
                android:id="@+id/radio_button1_a1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="A. 25.30"
                android:layout_margin="4dp"
                style="@style/CategoryStyle"
                />

            <RadioButton
                android:id="@+id/radio_button1_a2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" B. 25.5"
                android:layout_margin="4dp"
                style="@style/CategoryStyle"
                />
            <RadioButton
                android:id="@+id/radio_button1_a3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="C. 25.00"
                android:layout_margin="4dp"
                style="@style/CategoryStyle"
                />

            <RadioButton
                android:id="@+id/radio_button1_a4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="D. 12.25"
                style="@style/CategoryStyle"
                android:layout_margin="4dp"
                />



        </RadioGroup>



    </LinearLayout>

</ScrollView>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/question2View"
            android:layout_margin="16dp"
            android:background="@color/category_colors"
           android:layout_gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Question 2"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:textSize="50dp"
                style="@style/CategoryStyle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maths_question2"
                android:textSize="15dp"
                android:layout_margin="16dp"
                style="@style/CategoryStyle"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/maths_groupq2">

                <RadioButton
                    android:id="@+id/radio_button2_a1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="A. 1/55"
                    android:padding="16dp"
                    android:layout_margin="4dp"
                    style="@style/CategoryStyle"/>

                <RadioButton
                    android:id="@+id/radio_button2_a2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="B. 55"
                    android:padding="16dp"
                    android:layout_margin="4dp"
                    style="@style/CategoryStyle"
                    />
                <RadioButton
                    android:id="@+id/radio_button2_a3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="C. 3/11"
                    android:padding="16dp"
                    android:layout_margin="4dp"
                    style="@style/CategoryStyle"
                    />

                <RadioButton
                    android:id="@+id/radio_button2_a4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="D. 1/11"
                    android:padding="16dp"
                    android:layout_margin="4dp"
                    style="@style/CategoryStyle"
                    />



            </RadioGroup>



        </LinearLayout>
        </ScrollView>
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/question3View"
                android:background="@color/category_colors"
                android:layout_margin="16dp"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Question 3"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:textSize="50dp"
                    style="@style/CategoryStyle"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maths_question3"
                    android:textSize="15dp"
                    android:layout_margin="16dp"
                    style="@style/CategoryStyle"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/maths_groupq3"
                    >

                    <RadioButton
                        android:id="@+id/radio_button3_a1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="A. 149"
                        android:layout_margin="4dp"
                        style="@style/CategoryStyle"
                        />

                    <RadioButton
                        android:id="@+id/radio_button3_a2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="B. 166"
                        android:layout_margin="4dp"
                        style="@style/CategoryStyle"
                        />
                    <RadioButton
                        android:id="@+id/radio_button3_a3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="C. 150"
                        android:layout_margin="4dp"
                        style="@style/CategoryStyle"
                        />

                    <RadioButton
                        android:id="@+id/radio_button3_a4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="D. 151"
                        style="@style/CategoryStyle"
                        android:layout_margin="4dp"
                        />



                </RadioGroup>



            </LinearLayout>



        </ScrollView>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/question4View"
                android:background="@color/category_colors"
                android:layout_margin="16dp"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Question 4"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:textSize="50dp"
                    style="@style/CategoryStyle"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maths_question4"
                    android:textSize="15dp"
                    android:layout_margin="16dp"
                    style="@style/CategoryStyle"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/maths_groupq4"

                    >

                    <RadioButton
                        android:id="@+id/radio_button4_a1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="A. 52"
                        android:layout_margin="4dp"
                        style="@style/CategoryStyle"
                        />

                    <RadioButton
                        android:id="@+id/radio_button4_a2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="B. 502"
                        android:layout_margin="4dp"
                        style="@style/CategoryStyle"
                        />
                    <RadioButton
                        android:id="@+id/radio_button4_a3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="C. 520"
                        android:layout_margin="4dp"
                        style="@style/CategoryStyle"
                        />

                    <RadioButton
                        android:id="@+id/radio_button4_a4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="D. 5002"
                        style="@style/CategoryStyle"
                        android:layout_margin="4dp"
                        />



                </RadioGroup>



            </LinearLayout>


        </ScrollView>


        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/question5View"
                android:background="@color/category_colors"
                android:layout_margin="16dp"
               android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Question 5"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:textSize="50dp"
                    style="@style/CategoryStyle"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maths_question5"
                    android:textSize="15dp"
                    android:layout_margin="16dp"
                    style="@style/CategoryStyle"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/maths_groupq5"
                    >

                    <RadioButton
                        android:id="@+id/radio_button5_a1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="A. 78"
                        android:layout_margin="4dp"
                        style="@style/CategoryStyle"
                        />

                    <RadioButton
                        android:id="@+id/radio_button5_a2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="B. 136"
                        android:layout_margin="4dp"
                        style="@style/CategoryStyle"
                        />
                    <RadioButton
                        android:id="@+id/radio_button5_a3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="C. 156"
                        android:layout_margin="4dp"
                        style="@style/CategoryStyle"
                        />

                    <RadioButton
                        android:id="@+id/radio_button5_a4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="D. 196"
                        style="@style/CategoryStyle"
                        android:layout_margin="4dp"
                        />



                </RadioGroup>



            </LinearLayout>



        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/scoreView"
            android:background="@color/category_colors"
            android:layout_margin="16dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Final Score"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:textSize="50dp"
                style="@style/CategoryStyle"/>

            <TextView
                android:id="@+id/final_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:textSize="100dp"
                style="@style/CategoryStyle"/>



        </LinearLayout>



    </LinearLayout>








    </ScrollView>



</LinearLayout>




